<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anchor_app_bg"
    android:orientation="vertical"
    android:paddingTop="?attr/actionBarSize" >

    <com.atn.app.component.REditText
        android:id="@+id/txt_current_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:hint="@string/old_password_title"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColorHint="@color/color_user_screen_hint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/seperator_height"
        android:background="@color/list_view_divider" />

    <com.atn.app.component.REditText
        android:id="@+id/txt_new_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@android:color/white"
        android:hint="@string/new_password_title"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@color/color_user_screen_hint" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/seperator_height"
        android:background="@color/list_view_divider" />

    <com.atn.app.component.REditText
        android:id="@+id/txt_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/white"
        android:hint="@string/confirm_password_title"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:textColorHint="@color/color_user_screen_hint" />

</LinearLayout>